# 3drenderer

./: CMakeLists.txt
include/: display.h  mesh.h  objloader.h  triangle.h  vec.h  vector.h  window.h
src/: display.c  main.c  main.cpp  mesh.cpp  objloader.cpp  window.cpp
